Cambios de estilo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,7 @@
 
     <string name="contexto" >"Si has encontrado a una mascota puedes buscarla por medio de los siguientes parámetros:\n\n- Especie\n- Género\n- Raza\n- Tamaño\n- Edad"</string>
 
+    <string name="lista_perfiles">Lista de resultados</string>
+
 
 </resources>
