Otros pequeños detalles de diseño. Los botones de cerrar sesión y salir ya no se muestran independientes en la vista horizontal. Creación de los botones de Mi cuenta.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,9 @@
 
     <string name="lista_perfiles">Lista de resultados</string>
 
+    <string name="verInfoCuenta">Ver información de la cuenta</string>
+    <string name="verPerfilesCreados">Ver perfiles creados</string>
+
+
 
 </resources>
