--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,8 +58,10 @@
 
     <string name="enviarDatos">"Enviar datos de contacto"</string>
 
-    <string name="ingreseCorreo">"Ingrese su dirección de correo electrónico"</string>
-    <string name="validacion">"Validar"</string>
+    <string name="lista_mis_perfiles">"Mis Perfiles"</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
