--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
 
     <string name="lista_mis_perfiles">"Mis Perfiles"</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="eliminar">"Eliminar perfil"</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
